<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/category"
            android:minHeight="48dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:importantForAutofill="no"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            tools:ignore="Autofill,TextFields,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnUpdateTransaction"
            android:text="@string/update_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navyBlue"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
