<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_500"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2025_04_10"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch_with_friends"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="8dp">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
