<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tvBudgetCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/food"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvBudgetAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_5000"
            android:textColor="@color/black" />


        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
