<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/tvTitleIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_income"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tvTitleIncome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <Spinner
        android:id="@+id/spinnerIncomeCategory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/spinnerIncomeCategory"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/etIncomeAmount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/rs"
        android:inputType="numberDecimal"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAmountLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvNoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/etIncomeAmount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/etIncomeNote"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:hint="@string/write_note"
        android:padding="16dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tvNoteLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/etIncomeNote"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/etIncomeDate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/dd_mm_yy"
        android:focusable="false"
        android:background="@drawable/edittext_background"
        android:drawableEnd="@drawable/ic_calendar"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/tvDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSaveIncome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:backgroundTint="@color/navyBlue"
        app:layout_constraintTop_toBottomOf="@id/etIncomeDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
